# metpyir

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: versions.json
docs/source/api/: index.rst
docs/source/how-tos/: index.rst
docs/source/topics/: index.rst
docs/source/tutorials/: index.rst
